# head_hunter_rust

./: Cargo.toml
data/: dictionaries.json  vacancy.json  visitors.json
derive/: Cargo.toml
derive/src/: lib.rs
examples/auth/: Cargo.toml
examples/auth/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
src/: artifacts.rs  auth.rs  dictionary.rs  employers.rs  lib.rs  phone.rs  resumes.rs  utils.rs  vacancies.rs
src/artifacts/: body.rs  request.rs  response.rs
src/artifacts/response/: conditions.rs  photo.rs  portfolio.rs  success.rs
src/auth/: queries.rs  request.rs  token.rs
src/employers/: body.rs  queries.rs  request.rs  response.rs
src/employers/response/: employer.rs  saved_searches.rs
src/phone/: body.rs  queries.rs  request.rs  response.rs  resumes.rs
src/resumes/: parameters.rs  queries.rs  request.rs  response.rs
src/resumes/response/: conditions.rs  mine.rs  status.rs  views.rs
src/template/: body.rs  parameters.rs  request.rs  response.rs
src/user/: body.rs  request.rs  response.rs
src/utils/: dictionary.rs  error.rs  helpers.rs  query.rs  query_handler.rs  request.rs  traits.rs
src/vacancies/: data.rs  mod.rs  queries.rs  request.rs  requests.rs  response.rs  vacancy.rs  visitors.rs
src/vacancies/response/: hidden.rs  vacancy.rs  visitors.rs
tests/: basic_test.rs  vacancy_test.rs
