[package]
name = "hh_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hh_rust"
path = "src/lib.rs"

[dependencies]
serde = {version = "1.0.163", features = ["derive"]}
serde_url_params = "0.2.1"
serde_json = "1.0.96"

reqwest = "0.11.17" 
url = "2.3.1"

thiserror = "*"
async-trait = "0.1.68"
chrono = { version = "0.4.24", features = ["serde"] }
