[package]
name = "derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "2.0.16"
quote = "1.0.27"
proc-macro-error = "1.0"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
